# oop_todo

./: .gitignore  README.md  pyproject.toml
todo/: status_enum.py  task.py  task_list.py
