[tool.poetry]
name = "oop-todo"
version = "0.1.0"
description = ""
authors = ["Kinetics20 <kinetics20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
